채팅, 참여자 목록에 사용자 설명 추가

--- a/CollaborativeComputingLab/Presentation/Sources/Presentation/View/Cell/ChatTableViewCell/ChatTableViewCell.xib
+++ b/CollaborativeComputingLab/Presentation/Sources/Presentation/View/Cell/ChatTableViewCell/ChatTableViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,33 +17,53 @@
                 <rect key="frame" x="0.0" y="0.0" width="488" height="113"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mfz-ju-kO0">
-                        <rect key="frame" x="16" y="8" width="47" height="21"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdU-wr-2uj">
-                        <rect key="frame" x="16" y="45" width="456" height="52"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="LPX-sr-gNA">
+                        <rect key="frame" x="16" y="16" width="456" height="81"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="QUf-Pb-wZx">
+                                <rect key="frame" x="0.0" y="0.0" width="55" height="21.666666666666668"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mfz-ju-kO0">
+                                        <rect key="frame" x="0.0" y="0.0" width="47" height="21.666666666666668"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gMJ-cg-mxJ">
+                                        <rect key="frame" x="55" y="11" width="0.0" height="0.0"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" systemColor="secondaryLabelColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdU-wr-2uj">
+                                <rect key="frame" x="0.0" y="64" width="35.333333333333336" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="sdU-wr-2uj" secondAttribute="trailing" constant="16" id="JY4-rT-af6"/>
-                    <constraint firstItem="sdU-wr-2uj" firstAttribute="top" secondItem="Mfz-ju-kO0" secondAttribute="bottom" constant="16" id="PxN-MT-hBS"/>
-                    <constraint firstAttribute="bottom" secondItem="sdU-wr-2uj" secondAttribute="bottom" constant="16" id="Qjw-fb-3q7"/>
-                    <constraint firstItem="Mfz-ju-kO0" firstAttribute="top" secondItem="0J5-rH-ULk" secondAttribute="top" constant="8" id="Sf9-yf-IA7"/>
-                    <constraint firstItem="Mfz-ju-kO0" firstAttribute="leading" secondItem="0J5-rH-ULk" secondAttribute="leading" constant="16" id="WNp-4Z-CA5"/>
-                    <constraint firstItem="sdU-wr-2uj" firstAttribute="leading" secondItem="0J5-rH-ULk" secondAttribute="leading" constant="16" id="kEW-DG-KAI"/>
+                    <constraint firstItem="LPX-sr-gNA" firstAttribute="top" secondItem="0J5-rH-ULk" secondAttribute="top" constant="16" id="3JT-19-GjZ"/>
+                    <constraint firstItem="LPX-sr-gNA" firstAttribute="leading" secondItem="0J5-rH-ULk" secondAttribute="leading" constant="16" id="6KX-Gd-mHC"/>
+                    <constraint firstAttribute="trailing" secondItem="LPX-sr-gNA" secondAttribute="trailing" constant="16" id="QUc-nJ-2kU"/>
+                    <constraint firstAttribute="bottom" secondItem="LPX-sr-gNA" secondAttribute="bottom" constant="16" id="tR2-LU-lEC"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="descriptionLabel" destination="gMJ-cg-mxJ" id="aQi-Gg-WuS"/>
                 <outlet property="messageLabel" destination="sdU-wr-2uj" id="HdM-1X-Wum"/>
                 <outlet property="senderLabel" destination="Mfz-ju-kO0" id="zJU-uD-ptD"/>
             </connections>
             <point key="canvasLocation" x="122.13740458015266" y="15.140845070422536"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
